加入分布式发送推送消息服务

--- a/push-connector/pom.xml
+++ b/push-connector/pom.xml
@@ -21,5 +21,37 @@
       <version>${project.verson}</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>com.meizu.kiev</groupId>
+      <artifactId>meizu-kiev</artifactId>
+      <version>1.0.2-RC03</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-asm</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <!--spring 相关 -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
