--- a/tio-core/pom.xml
+++ b/tio-core/pom.xml
@@ -19,7 +19,6 @@
       <groupId>org.redisson</groupId>
       <artifactId>redisson</artifactId>
       <version>3.10.1</version>
-      <scope>provided</scope>
     </dependency>
 
     <!-- org.tio.monitor.RateLimiterWrap会用到 -->
@@ -27,27 +26,23 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>27.0.1-jre</version>
-      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>com.google.zxing</groupId>
       <artifactId>core</artifactId>
       <version>3.3.3</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.google.zxing</groupId>
       <artifactId>javase</artifactId>
       <version>3.3.3</version>
-      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
       <version>2.3.28</version>
-      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -66,6 +61,12 @@
       <groupId>net.oschina.j2cache</groupId>
       <artifactId>j2cache-core</artifactId>
       <version>2.7.7-release</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -89,7 +90,6 @@
       <groupId>org.apache.curator</groupId>
       <artifactId>curator-x-discovery</artifactId>
       <version>4.1.0</version>
-      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
