--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
         <module>push-common</module>
         <module>push-connector</module>
         <module>push-connector-client</module>
+        <module>push-gate</module>
+        <module>push-api</module>
+
     </modules>
 
 
