--- a/push-aio-sdk/pom.xml
+++ b/push-aio-sdk/pom.xml
@@ -8,13 +8,12 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.comsince.github</groupId>
-  <artifactId>push-sub</artifactId>
+  <artifactId>push-aio-sdk</artifactId>
   <packaging>jar</packaging>
   <version>${project.verson}</version>
   <url>http://maven.apache.org</url>
 
   <dependencies>
-
     <dependency>
       <groupId>com.comsince.github</groupId>
       <artifactId>tio-core</artifactId>
@@ -27,5 +26,10 @@
       <version>${project.verson}</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.comsince.github</groupId>
+      <artifactId>push-sub</artifactId>
+      <version>${project.verson}</version>
+    </dependency>
   </dependencies>
 </project>
