--- a/push-nio-sdk/pom.xml
+++ b/push-nio-sdk/pom.xml
@@ -8,24 +8,16 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.comsince.github</groupId>
-  <artifactId>push-sub</artifactId>
+  <artifactId>push-nio-sdk</artifactId>
   <packaging>jar</packaging>
   <version>${project.verson}</version>
   <url>http://maven.apache.org</url>
 
   <dependencies>
-
     <dependency>
       <groupId>com.comsince.github</groupId>
       <artifactId>tio-core</artifactId>
       <version>${project.verson}</version>
     </dependency>
-
-    <dependency>
-      <groupId>com.comsince.github</groupId>
-      <artifactId>push-common</artifactId>
-      <version>${project.verson}</version>
-    </dependency>
-
   </dependencies>
 </project>
