add sub response

--- a/push-aio-sdk/src/main/resources/log4j.properties
+++ b/push-aio-sdk/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #off/fatal/error/warn/info/debug/all
-log4j.debug=true
+log4j.debug=false
 log4j.rootLogger=debug,stdout,log,errorlog
 
 # Console
@@ -10,7 +10,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
 ### Log ###
 log4j.appender.log = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.log.File = ../logs/push-connector.log
+log4j.appender.log.File = ../logs/push-aio-sdk.log
 log4j.appender.log.Append = true
 log4j.appender.log.Threshold = DEBUG
 log4j.appender.log.DatePattern='.'yyyy-MM-dd
