push message success

--- a/push-gate/pom.xml
+++ b/push-gate/pom.xml
@@ -19,5 +19,12 @@
       <artifactId>tio-core</artifactId>
       <version>${project.verson}</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.comsince.github</groupId>
+      <artifactId>push-common</artifactId>
+      <version>${project.verson}</version>
+    </dependency>
+
   </dependencies>
 </project>
