--- a/push-common/pom.xml
+++ b/push-common/pom.xml
@@ -19,5 +19,45 @@
       <artifactId>tio-core</artifactId>
       <version>${project.verson}</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.meizu.kiev</groupId>
+      <artifactId>meizu-kiev</artifactId>
+      <version>2.2.2-RC05</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-asm</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <!--spring 相关 -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.redisson</groupId>
+      <artifactId>redisson</artifactId>
+      <version>3.10.1</version>
+    </dependency>
   </dependencies>
 </project>
