--- a/push-connector/src/main/conf/setting.properties
+++ b/push-connector/src/main/conf/setting.properties
@@ -1,2 +1,2 @@
-kiev.zookeeper.url=zookeeper://localhost:2181?timeout=30000
+kiev.zookeeper.url=zookeeper://zk-test-master1.meizu.mz:2181,zk-test-master2.meizu.mz:2181,zk-test-master3.meizu.mz:2181
 kiev.application.name=push-connector
