--- a/push-connector/src/test/resources/log4j.properties
+++ b/push-connector/src/test/resources/log4j.properties
@@ -29,4 +29,6 @@ log4j.appender.errorlog.layout.ConversionPattern =%-d{yyyy-MM-dd HH:mm:ss} [ %p 
 #Spring logging configuration
 log4j.category.org.springframework = warn
 
+log4j.logger.com.meizu.yard=OFF
+log4j.logger.org.apache.zookeeper.ClientCnxn=OFF
 #log4j.logger.com.zheng.upms.dao.mapper.UserMapper.selectUser=debug
