add cluster push,twproxy no support pub/sub

--- a/push-aio-sdk/src/main/resources/log4j.properties
+++ b/push-aio-sdk/src/main/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.appender.log.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %p ] [ 
 
 ### Error ###
 log4j.appender.errorlog = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.errorlog.File = ../logs/push-connector.error.log
+log4j.appender.errorlog.File = ../logs/push-aio-sdk.error.log
 log4j.appender.errorlog.Append = true
 log4j.appender.errorlog.Threshold = ERROR
 log4j.appender.errorlog.DatePattern='.'yyyy-MM-dd
