--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -1,28 +1,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.comsince.github</groupId>
     <artifactId>push</artifactId>
     <version>1.0.0</version>
   </parent>
 
-  <modelVersion>4.0.0</modelVersion>
   <groupId>com.comsince.github</groupId>
-  <artifactId>push-aio-sdk</artifactId>
-  <packaging>jar</packaging>
-  <version>${project.verson}</version>
+  <artifactId>sdk</artifactId>
+  <packaging>pom</packaging>
   <url>http://maven.apache.org</url>
+
+  <modules>
+    <module>push-aio-sdk</module>
+    <module>push-nio-sdk</module>
+  </modules>
 
   <dependencies>
     <dependency>
       <groupId>com.comsince.github</groupId>
       <artifactId>tio-core</artifactId>
-      <version>${project.verson}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.comsince.github</groupId>
-      <artifactId>push-sub</artifactId>
       <version>${project.verson}</version>
     </dependency>
   </dependencies>
