--- a/push-sub/pom.xml
+++ b/push-sub/pom.xml
@@ -27,6 +27,12 @@
       <version>${project.verson}</version>
     </dependency>
 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
