--- a/push-common/pom.xml
+++ b/push-common/pom.xml
@@ -65,6 +65,13 @@
       <artifactId>redisson</artifactId>
       <version>3.10.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
