--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -23,5 +23,22 @@
       <artifactId>tio-core</artifactId>
       <version>${project.verson}</version>
     </dependency>
+
+    <!--日志 -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+    </dependency>
+
+    <!--单元测试 -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
