--- a/tio-core/pom.xml
+++ b/tio-core/pom.xml
@@ -91,5 +91,11 @@
       <artifactId>curator-x-discovery</artifactId>
       <version>4.1.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
