modify push client

--- a/sdk/push-aio-sdk/src/main/resources/log4j.properties
+++ b/sdk/push-aio-sdk/src/main/resources/log4j.properties
@@ -10,12 +10,12 @@ log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
 ### Log ###
 log4j.appender.log = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.log.File = ../logs/push-aio-sdk.log
+log4j.appender.log.File = /data/logs/push-aio-sdk.log
 log4j.appender.log.Append = true
 log4j.appender.log.Threshold = DEBUG
 log4j.appender.log.DatePattern='.'yyyy-MM-dd
 log4j.appender.log.layout = org.apache.log4j.PatternLayout
-log4j.appender.log.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %p ] [ %C{1}.java :%L(%M)]  %m%n
+log4j.appender.log.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%t] [ %p ] [ %C{1}.java :%L(%M)]  %m%n
 
 ### Error ###
 log4j.appender.errorlog = org.apache.log4j.DailyRollingFileAppender
