--- a/sdk/push-nio-sdk/pom.xml
+++ b/sdk/push-nio-sdk/pom.xml
@@ -1,23 +1,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
-    <groupId>com.comsince.github</groupId>
-    <artifactId>sdk</artifactId>
-    <version>1.0.0</version>
-  </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.comsince.github</groupId>
   <artifactId>push-nio-sdk</artifactId>
   <packaging>jar</packaging>
-  <version>${project.verson}</version>
+  <version>1.0.0-SNAPSHOT</version>
   <url>http://maven.apache.org</url>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <dependencies>
+
     <dependency>
-      <groupId>com.comsince.github</groupId>
-      <artifactId>tio-core</artifactId>
-      <version>${project.verson}</version>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+
+    <!--单元测试 -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
