--- a/push-connector/src/test/resources/log4j.properties
+++ b/push-connector/src/test/resources/log4j.properties
@@ -31,4 +31,7 @@ log4j.category.org.springframework = warn
 
 log4j.logger.com.meizu.yard=OFF
 log4j.logger.org.apache.zookeeper.ClientCnxn=OFF
+log4j.logger.org.apache.http=OFF
+log4j.logger.com.meizu.kiev=OFF
+
 #log4j.logger.com.zheng.upms.dao.mapper.UserMapper.selectUser=debug
