优化心跳策略

--- a/push-auth/pom.xml
+++ b/push-auth/pom.xml
@@ -19,5 +19,12 @@
       <artifactId>tio-core</artifactId>
       <version>${project.verson}</version>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
