--- a/push-api/pom.xml
+++ b/push-api/pom.xml
@@ -23,6 +23,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.redisson</groupId>
+      <artifactId>redisson</artifactId>
+      <version>3.10.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
