--- a/demo/AndroidPushDemo/PushdemoInternal/build.gradle
+++ b/demo/AndroidPushDemo/PushdemoInternal/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile(name:'push-nio-sdk-1.0.0-SNAPSHOT',ext: 'jar')
     compile(group: 'com.meizu.flyme.internet', name: 'push-internal', version: '3.8.1', ext: 'aar')
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile("com.squareup.okhttp3:okhttp:3.0.0")
 }
 
 
