--- a/demo/AndroidPushDemo/PushdemoInternal/src/main/AndroidManifest.xml
+++ b/demo/AndroidPushDemo/PushdemoInternal/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.comsince.github.PushLogActivity"
+            android:name="com.comsince.github.PushMainActivity"
             android:configChanges="keyboardHidden"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden"
             android:label="@string/app_name" >
@@ -29,7 +29,7 @@
 
 
 
-        <service android:name="com.comsince.github.ForegroundService"/>
+        <service android:name="com.comsince.github.PushService"/>
 
 
 
