--- a/push-group/src/main/resources/application.properties
+++ b/push-group/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 kiev.zookeeper-url=zookeeper://zk-test-master1.meizu.mz:2181,zk-test-master2.meizu.mz:2181,zk-test-master3.meizu.mz:2181
 kiev.application-name=push-group
+server.port=8081
