--- a/spring-boot-web-push-api/pom.xml
+++ b/spring-boot-web-push-api/pom.xml
@@ -8,22 +8,23 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.comsince.github</groupId>
-  <artifactId>push-common</artifactId>
+  <artifactId>spring-boot-web-push-api</artifactId>
   <packaging>jar</packaging>
-  <version>${project.verson}</version>
+  <version>1.0.0-SNAPSHOT</version>
   <url>http://maven.apache.org</url>
 
   <dependencies>
-    <dependency>
-      <groupId>com.comsince.github</groupId>
-      <artifactId>tio-core</artifactId>
-      <version>${project.verson}</version>
-    </dependency>
 
     <dependency>
       <groupId>com.comsince.github</groupId>
       <artifactId>push-stub</artifactId>
-      <version>${project.verson}</version>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.56</version>
     </dependency>
 
     <dependency>
@@ -32,31 +33,36 @@
       <version>2.6</version>
     </dependency>
 
-    <!--spring 相关 -->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <scope>test</scope>
+      <groupId>org.redisson</groupId>
+      <artifactId>redisson</artifactId>
+      <version>3.10.2</version>
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
 
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
