--- a/push-sdk/pom.xml
+++ b/push-sdk/pom.xml
@@ -8,7 +8,8 @@
   </parent>
 
   <groupId>com.comsince.github</groupId>
-  <artifactId>sdk</artifactId>
+  <artifactId>push-sdk</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <url>http://maven.apache.org</url>
 
