--- a/spring-boot-dubbo-push-connector/pom.xml
+++ b/spring-boot-dubbo-push-connector/pom.xml
@@ -9,7 +9,7 @@
 
   <parent>
     <groupId>com.comsince.github</groupId>
-    <artifactId>push</artifactId>
+    <artifactId>universe_push</artifactId>
     <version>1.0.0</version>
   </parent>
 
