--- a/push-sdk/pom.xml
+++ b/push-sdk/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.comsince.github</groupId>
-    <artifactId>push</artifactId>
+    <artifactId>universe_push</artifactId>
     <version>1.0.0</version>
   </parent>
 
