--- a/push-stub/pom.xml
+++ b/push-stub/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>com.comsince.github</groupId>
-    <artifactId>push</artifactId>
+    <artifactId>universe_push</artifactId>
     <version>1.0.0</version>
   </parent>
 
