增加redis 配置说明

--- a/spring-boot-dubbo-push-connector/src/main/resources/application.properties
+++ b/spring-boot-dubbo-push-connector/src/main/resources/application.properties
@@ -10,3 +10,6 @@ dubbo.protocol.port=7461
 
 ## Dubbo Registry
 dubbo.registry.address=zookeeper://zk-test-master1.meizu.mz:2181
+
+## redis address
+push.redis.address=redis://172.16.46.213:6379
