--- a/spring-boot-web-push-api/src/main/resources/application.properties
+++ b/spring-boot-web-push-api/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 spring.application.name=spring-boot-web-push-api
 ## Dubbo Registry
 dubbo.registry.address=zookeeper://zk-test-master1.meizu.mz:2181
+
+## redis address
+push.redis.address=redis://172.16.46.213:6379
