--- a/push-sdk/sofa-bolt-sdk/pom.xml
+++ b/push-sdk/sofa-bolt-sdk/pom.xml
@@ -1,6 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+  <!--<parent>-->
+    <!--<groupId>com.comsince.github</groupId>-->
+    <!--<artifactId>push-sdk</artifactId>-->
+    <!--<version>1.0.0-SNAPSHOT</version>-->
+  <!--</parent>-->
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.comsince.github</groupId>
   <artifactId>sofa-bolt-sdk</artifactId>
@@ -32,6 +38,17 @@
       <groupId>com.alipay.sofa</groupId>
       <artifactId>hessian</artifactId>
       <version>4.0.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.12</version>
     </dependency>
 
     <!--单元测试 -->
